added doctor & patient APIs, appointment booking,and email setup

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,15 @@
 #ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 DATABASE_URL=postgresql://vasee:8Ya5nPjHbnpu7ejewi1cMyC6jBihLcZC@dpg-d3dsm5be5dus73bv9eeg-a.frankfurt-postgres.render.com/hms123
+MAIL_USERNAME=mohank12092003@gmail.com
+MAIL_PASSWORD=ishu ktsr jdhj kzjq
+MAIL_FROM=mohansilambam2004@gmail.com
+MAIL_PORT=587
+
+
+
+
+MAIL_SERVER=smtp.gmail.com
+MAIL_STARTTLS=True
+MAIL_SSL_TLS=False
+USE_CREDENTIALS=True
