--- a/backend/app/db/appointments.json
+++ b/backend/app/db/appointments.json
@@ -107,8 +107,9 @@
             "doctor": "Dr. Anna Baldwin",
             "date": "2025-10-14",
             "time": "10:19 AM",
-            "status": "booked",
-            "created_at": "2025-10-02T04:50:05.272938Z"
+            "status": "cancelled",
+            "created_at": "2025-10-02T04:50:05.272938Z",
+            "updated_at": "2025-10-02T05:40:54.658443Z"
         },
         {
             "appointment_id": "APT-10013",
@@ -120,6 +121,17 @@
             "time": "10:29 PM",
             "status": "booked",
             "created_at": "2025-10-02T04:59:18.136549Z"
+        },
+        {
+            "appointment_id": "APT-1759369262",
+            "doctor": "vasee",
+            "doctor_email": "rockyvasee@gmail.com",
+            "patient": "Mohan K",
+            "patient_email": "mohank12092003@gmail.com",
+            "time": "8:00AM",
+            "status": "rejected",
+            "created_at": "2025-10-02T07:11:02.031985",
+            "updated_at": "2025-10-02T07:18:08.668448"
         }
     ]
 }
